Add WINCON option to Makefile.vc

--- a/wincon/Makefile.vc
+++ b/wincon/Makefile.vc
@@ -39,6 +39,10 @@ WIDEOPT		= -DPDC_WIDE
 UTF8OPT		= -DPDC_FORCE_UTF8
 !endif
 
+!ifdef WINCON
+WINCONOPT = -DPDC_WINCON_EXT
+!endif
+
 !ifdef INFOEX
 INFOPT		= -DHAVE_NO_INFOEX
 !endif
@@ -64,7 +68,7 @@ PDCLIBS		= $(LIBCURSES)
 !endif
 
 BUILD		= $(CC) -I$(PDCURSES_SRCDIR) -c $(CFLAGS) $(DLLOPT) \
-$(WIDEOPT) $(UTF8OPT) $(INFOPT)
+$(WIDEOPT) $(UTF8OPT) $(WINCONOPT) $(INFOPT)
 
 all:	$(PDCLIBS)
 
